# art-book-online.github.io

./: .gitattributes  .gitignore  Gemfile  README.md  _config.yml  about.md  index.md  pyproject.toml  requirements.txt
.github/workflows/: jekyll-gh-pages.yml  jekyll.yml
_data/: authors.yml  navigation.yml  ui-text.yml
_includes/head/: custom.html
_notebooks/: artlib.md  first-notebook.md  fuzzyart-parts.md  fuzzyart-pytorch.md  jupyter-basics.md
_notebooks/notebooks/: artlib.ipynb  fuzzyart-parts.ipynb  fuzzyart-pytorch.ipynb  sample.ipynb
_pages/: 404.md  about.md  categories.md  downloads.md  notebooks.md  posts.md  tags.md  unfinished.md
_plugins/: jupyter_notebook.rb  jupyterpluginer.rb  notebook-sidebar.rb  render-time.rb
_posts/: 2025-12-30-first-post.md  2025-12-30-why.md
_sass/custom/: styles.css
src/notebooks/: sample.ipynb
